[package]
name = "dioxus-dev"
version = "0.1.0"
authors = ["Sumit Modak"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", optional = true }
dioxus = { version = "0", features = ["router", "fullstack", "cli-config"] }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"], optional = true }

[features]
default = []
server = [ "dioxus/server", "dep:tokio", "dep:axum" ]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
