[package]
name = "dioxus-dev"
version = "0.1.0"
authors = ["Sumit Modak"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", optional = true }
dioxus = { version = "0", features = ["router", "fullstack", "cli-config"] }
js-sys = "0.3.77"
reqwest = { version = "0.12.20", features = ["json"] }
scraper = { version = "0.23.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"], optional = true }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverEntryInit", "IntersectionObserverInit"] }

[features]
default = []
server = [ "dioxus/server", "dep:tokio", "dep:axum", "dep:scraper" ]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
